# gstadv

./: meson.build
plugins/: gstadv.cpp  gstadvaudiosrc.cpp  gstadvaudiosrc.h  meson.build
